homarr/05.traefik_ingressRoute.yaml
#
# Middleware for redirecting 
#
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: homarr
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
#
# HTTP Ingress routes
#
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr-http-ingress-routes
  namespace: homarr
spec:
  entryPoints:
    - web
  routes:
    # Proxmox DELL 1
    - match: Host(`homarr.home.net`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
      - name: homarr
        port: 80
        namespace: homarr
        # scheme: http
---
#
# HTTPS Ingress routes
#
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr-https-ingress-routes
  namespace: homarr
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-tls
  routes:
    #Proxmox
    - match: Host(`homarr.home.net`)
      kind: Rule
      services:
      - name: homarr
        port: 80
        namespace: homarr
        # scheme: https
        serversTransport: homarr-transport
